kubernetes/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: calculatrice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calculatrice-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - calculatrice-gateway
  http:
    - match:
        - uri:
            prefix: /calculatrice/
      route:
        - destination:
            host: calculatrice-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: calculatrice-front
            port:
              number: 80
