kubernetes/authorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: calculatrice-policy-back
  namespace: default
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["default", "istio-system"]
  selector:
    matchLabels:
      app: calculatrice-service
